# micrograd

./: .gitignore  micrograd.ipynb  pyproject.toml
micrograd/: engine.py  nn.py
