[project]
name = "micrograd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "ray>=2.48.0",
    "seaborn>=0.13.2",
    "stats>=0.1.2a0",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
]
